--- a/server/src/public/test2.html
+++ b/server/src/public/test2.html
@@ -11,7 +11,7 @@
                         function(){
                                 $.ajax({
                                         type: "POST",
-                                        url: "http://localhost:57939/",
+                                        url: "http://localhost:57939/api/1.0/",
                                         data: $("#json_com").val(),
                                         contentType: "application/json",
                                         dataType: "json",
@@ -23,6 +23,7 @@
                                         },
                                         error: function(response){
                                                 //alert( "ERROR: " + response );
+                                                $("#result").text( JSON.stringify(response) );
                                                 $("#status").text( "NG" );
                                         }
                                 });
